# tinydb-sueprflow

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  quick_start.md
.superpowers/sdd/: progress.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md
changes/cli-enhancements/: .spec-superflow.yaml  decision-point-audit.md  design.md  execution-contract.md  proposal.md  tasks.md
changes/concurrency-control/: .spec-superflow.yaml  decision-point-audit.md  design.md  execution-contract.md  proposal.md  tasks.md
changes/multi-table-join/: .spec-superflow.yaml  decision-point-audit.md  design.md  execution-contract.md  proposal.md  tasks.md
changes/tinydb/: .spec-superflow.yaml  decision-point-audit.md  design.md  execution-contract.md  proposal.md  tasks.md
specs/btree-index/: spec.md
specs/cli-enhancements/: spec.md
specs/cli-repl/: spec.md
specs/concurrency-control/: spec.md
specs/join-query/: spec.md
specs/query-execution/: spec.md
specs/sql-interface/: spec.md
specs/transactions/: spec.md
tests/: test_api.py  test_btree.py  test_cli.py  test_cli_enhancements.py  test_concurrency.py  test_integration.py  test_join.py  test_parser.py  test_query_execution.py  test_schema_types.py  test_storage.py  test_transactions.py
tinydb/: __init__.py  api.py  catalog.py  cli.py  cli_commands.py  cli_rendering.py  errors.py  executor.py  explain.py  locking.py  planner.py  result.py  transaction.py  types.py
tinydb/index/: __init__.py  btree.py
tinydb/sql/: __init__.py  ast.py  expressions.py  (+2 more)
(+6 files in other folders)
